# manastone-diag

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SOURCES.md  install.sh  manage.bat  manage.sh  manastone-diag  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.pi/: AGENTS.md  SYSTEM.md  settings.json
.pi/skills/: balance-control-principles.md  communication-fault-principles.md  communication-fault.md  communication.md  connect-robot.md  gait-instability.md  gait-stability.md  joint-overheat.md  joint-thermal-management.md  mode-switch-fall.md  power-management.md  power-system-principles.md  power-system.md  sensor-calibration-principles.md  sensor-calibration.md  thermal-management-principles.md
.pi/skills/g1/: communication-fault.md  gait-instability.md  joint-overheat.md  power-system.md  sensor-calibration.md
docs/: DEVLOG_2026-05-15.md  DIAG_REPORT_X220028C4Z0079.md  HANDOFF_2026-05-15.md  MATURITY.md  QUICKSTART.md  SAFETY_CONSTRAINT_JOINT_DEFAULT.md  SPEC.md
docs/cases/: 2026-05-x2-group-fall.md  x2-group-fall-walkthrough.md
docs/zh/: README.md
examples/g1-sample-incident/info/: robot_status.yaml
examples/sample-incident/info/: robot_status.yaml
knowledge/: actions.yaml  capability_boundary.yaml  diagnostic_knowledge.yaml  events.yaml  interfaces.yaml
packaging/pypi-stub/: BACKUP.md  LICENSE  README.md  pyproject.toml
packaging/pypi-stub/src/manastone_diag/: __init__.py
packaging/pypi-stub/src/manastone_diag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: check_boundary.sh  check_knowledge.py  check_maturity.py  check_package.py  init_public_repo.sh
tools/: atop_reader.py  config.py  diagnostic_orchestrator.py  experience_manager.py  fault_library.py  import_tool.py  log_ingestor.py  mcap_joint_parser.py  mcap_reader.py  robot_knowledge.py  session_archiver.py  verify_all.py
tools/knowledge/: README.md  capability_boundary.yaml  causal_rules.yaml  event_patterns.yaml  hardware.yaml
tools/knowledge/unitree_g1/: actions.yaml  capability_boundary.yaml  causal_rules.yaml  diagnostic_knowledge.yaml  event_patterns.yaml  events.yaml  hardware.yaml  interfaces.yaml
