[project]
name = "manastone-diag"
version = "2.2.0"
description = "Offline fault diagnosis assistant for the AgiBot X2 Ultra humanoid robot: drop in a log package, describe the symptom, get a three-round reviewed diagnosis report"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "zengury", email = "zengury@gmail.com" },
]
dependencies = [
  "pyyaml>=6.0",
  "mcap>=1.3",
  "mcap-ros2-support>=0.5",
]

[project.urls]
Homepage = "https://github.com/zengury/manastone-diag"
Changelog = "https://github.com/zengury/manastone-diag/blob/main/CHANGELOG.md"
